--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -18,24 +18,32 @@ jobs:
         node-version: [18.x, 20.x, 22.x]
 
     steps:
-      # Checkout the code without initializing submodules
+      # Checkout code without submodules
       - uses: actions/checkout@v4
         with:
           submodules: false
 
+      # Use Node.js version matrix
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v4
         with:
           node-version: ${{ matrix.node-version }}
           cache: 'npm'
-          cache-dependency-path: package-lock.json
+          cache-dependency-path: JS-Fundamentals/package-lock.json
 
+      # Install dependencies inside the folder
       - name: Install dependencies
+        working-directory: JS-Fundamentals
         run: npm ci
 
+      # Build project if build script exists
       - name: Build project
+        working-directory: JS-Fundamentals
         run: npm run build --if-present
 
+      # Run tests
       - name: Run tests
+        working-directory: JS-Fundamentals
         run: npm test
+
 
