--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -1,8 +1,10 @@
 # This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-nodejs
 
+# .github/workflows/node.js.yml
 name: Node.js CI
 
+# Trigger on push or pull request to main branch
 on:
   push:
     branches: [ "main" ]
@@ -18,25 +20,25 @@ jobs:
         node-version: [18.x, 20.x, 22.x]
 
     steps:
-      # Checkout code without submodules
-      - uses: actions/checkout@v4
+      # Checkout code without initializing any submodules
+      - name: Checkout repository
+        uses: actions/checkout@v4
         with:
           submodules: false
 
-      # Use Node.js version matrix
+      # Use Node.js of the version defined in the matrix
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v4
         with:
           node-version: ${{ matrix.node-version }}
           cache: 'npm'
-          cache-dependency-path: JS-Fundamentals/package-lock.json
 
-      # Install dependencies inside the folder
+      # Install dependencies in JS-Fundamentals folder
       - name: Install dependencies
         working-directory: JS-Fundamentals
         run: npm ci
 
-      # Build project if build script exists
+      # Build if a build script exists
       - name: Build project
         working-directory: JS-Fundamentals
         run: npm run build --if-present
@@ -45,5 +47,7 @@ jobs:
       - name: Run tests
         working-directory: JS-Fundamentals
         run: npm test
+
+
 
 
