--- a/JS-Fundamentals/package.json
+++ b/JS-Fundamentals/package.json
@@ -1,12 +1,19 @@
 {
   "name": "js-fundamentals",
   "version": "1.0.0",
-  "description": "Collection of JavaScript fundamentals scripts",
+  "description": "A collection of JavaScript fundamental scripts for learning purposes.",
   "main": "0-javascript_is_amazing.js",
   "scripts": {
+    "start": "node 0-javascript_is_amazing.js",
     "test": "node 0-javascript_is_amazing.js && node 1-multi_languages.js && node 2-arguments.js && node 3-value_argument.js && node 4-concat.js && node 5-to_integer.js && node 6-multi_languages_loop.js && node 7-multi_c.js && node 8-square.js && node 9-add.js && node 10-factorial.js"
   },
-  "author": "",
+  "keywords": [
+    "javascript",
+    "learning",
+    "fundamentals",
+    "scripts"
+  ],
+  "author": "cromsonwater27",
   "license": "ISC",
   "type": "commonjs"
 }
